--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -3,6 +3,9 @@
   "bracketSpacing": true,
   "tabWidth": 2,
   "semi": true,
-  "trailingComma": "es5"
-
+  "trailingComma": "es5",
+  "plugins": [
+    "@ianvs/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
