--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.7.9",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "debounce": "^2.2.0",
+    "drawer": "^0.0.2",
+    "framer-motion": "^11.15.0",
+    "hugeicons-react": "^0.3.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
+    "react-modern-drawer": "^1.4.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
+    "tailwind-merge": "^2.6.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
