feat: added lenis smooth scroll and format on save prettier

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,6 +4,37 @@
   "tabWidth": 2,
   "semi": true,
   "trailingComma": "es5",
+  "importOrder": [
+    "^(react/(.*)$)|^(react$)",
+    "^(react-router-dom)",
+    "^(@tanstack/(.*)$)",
+    "^(@reduxjs/(.*)$)|^(redux-(.*)$)|^(react-redux)",
+    "",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^@/pages(.*)$",
+    "^@/features(.*)$",
+    "^@/components(.*)$",
+    "^@/hoc(.*)$",
+    "^@/layout(.*)$",
+    "^@/navigation(.*)$",
+    "^@/assets(.*)$",
+    "",
+    "^@/hooks(.*)$",
+    "^@/redux(.*)$",
+    "^@/utils(.*)$",
+    "^@/lib(.*)$",
+    "^@/contants(.*)$",
+    "",
+    "^(?!.*[.]css$)[./].*$",
+    "",
+    "^types$",
+    "^@/@types(.*)$",
+    "",
+    "^@/services/(.*)$",
+    ".css$"
+  ],
+  "importOrderSeparation": true,
   "plugins": [
     "@ianvs/prettier-plugin-sort-imports",
     "prettier-plugin-tailwindcss"
