--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mantine/core": "^7.15.3",
+    "@mantine/hooks": "^7.15.3",
     "@reduxjs/toolkit": "^2.5.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-query": "^4.36.1",
