--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL = http://localhost:3000/api/v1/user
+
+GOOGLE_CLIENT_ID = 94201072792-8h53pgt32q4r4qgeddfntmiffnvdg3dh.apps.googleusercontent.com
