--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@mantine/core": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-query": "^4.36.1",
@@ -30,6 +31,7 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-modern-drawer": "^1.4.0",
