--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mantine/carousel": "^7.17.1",
     "@mantine/core": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
     "@react-oauth/google": "^0.12.1",
@@ -25,6 +26,7 @@
     "dayjs": "^1.11.13",
     "debounce": "^2.2.0",
     "drawer": "^0.0.2",
+    "embla-carousel-react": "^7.1.0",
     "framer-motion": "^11.15.0",
     "hugeicons-react": "^0.3.0",
     "prettier": "^3.4.2",
