--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "swiper": "^11.2.5",
     "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
   },
