--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,7 @@
 VITE_BASE_URL = http://localhost:3000/api/v1/user
 
 GOOGLE_CLIENT_ID = 94201072792-8h53pgt32q4r4qgeddfntmiffnvdg3dh.apps.googleusercontent.com
+
+VITE_EMAIL_JS_PUBLIC_KEY = E8EL_y_fz78i4NbcJ
+VITE_EMAIL_JS_SERVICE_KEY = service_wd615v4
+VITE_EMAIL_JS_TEMPLATE_KEY = template_bbru344
