feat: esewa integration

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_ID = 94201072792-8h53pgt32q4r4qgeddfntmiffnvdg3dh.apps.googleuserc
 VITE_EMAIL_JS_PUBLIC_KEY = E8EL_y_fz78i4NbcJ
 VITE_EMAIL_JS_SERVICE_KEY = service_wd615v4
 VITE_EMAIL_JS_TEMPLATE_KEY = template_bbru344
+
+KHALTI_PUBLIC_KEY = test_public_key_demo  
